--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>IDisc</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="src/styles/reset.css">
+    <link type="text/css" rel="stylesheet" href="src/styles/materialize/css/materialize.css"  media="screen,projection"/>
+    <link rel="stylesheet" href="src/styles/main.css">
 </head>
 <body>
+    <nav>
+        <div class="nav-wrapper">
+            <a href="/" class="brand-logo idisc-logo">IDisc</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="scorecards-display.html">Scorecards</a></li>
+                <li><a href="scorecard-add.html">Add A Scorecard</a></li>
+            </ul>
+        </div>
+    </nav>
+    <ul class="sidenav" id="mobile-demo">
+        <li><a href="/">Home</a></li>
+        <li><a href="scorecards-display.html">Scorecards</a></li>
+        <li><a href="scorecard-add.html">Add A Scorecard</a></li>
+    </ul>
+    <img class="responsive-img" src="assets/cover.jpg" alt="image of a person on a disc golf course">
     
+    <script type="text/javascript" src="src/styles/materialize/js/materialize.js"></script>
+    <script type="module" src="src/index.js"></script>
 </body>
 </html>
